refactored app structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>
-  WELCOME
-</h1>
-<app-roles>
+<div class="container-fluid">
+    <router-outlet>
+        
+    </router-outlet>
 
-</app-roles>
+</div>
