--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4">
-    <h3>Employee Details Submission Form </h3>
+    <h3>Employee Details Submission Form</h3>
     <div class="outerDiv">
       <form #form="ngForm">
         <div class="row">
@@ -72,7 +72,6 @@
           </div>
           <div class="col-md-8">
             <select
-             
               name="Skills"
               required
               #skills="ngModel"
@@ -84,7 +83,7 @@
                 <span> Required </span>
                 } }
               </div>
-            
+
               <option>Dot Net</option>
               <option>Java</option>
               <option>Angular</option>
@@ -144,7 +143,10 @@
           <div class="col-md-8">
             <input
               type="text"
-              [disabled]="employeeObj.IsCertification=='No' || employeeObj.IsCertification=='No'"
+              [disabled]="
+                employeeObj.IsCertification == 'No' ||
+                employeeObj.IsCertification == 'No'
+              "
               name="Certification"
               required
               #cert="ngModel"
@@ -208,7 +210,8 @@
             <button class="btn btn-secondary btn-sm">Cancel</button>
             <button
               class="btn btn-secondary btn-sm mx-2"
-              [disabled]="form.invalid" (click)="onSave()"
+              [disabled]="form.invalid"
+              (click)="onSave()"
             >
               Save
             </button>
@@ -252,12 +255,11 @@
             required
             #search="ngModel"
             [(ngModel)]="searchText"
-            class="form-control" (ngModelChange)="onSearch()"
+            class="form-control"
+            (ngModelChange)="onSearch()"
           />
           <div>
-            @if (search.touched) { @if (search.errors?.['required']) {
-            
-            } }
+            @if (search.touched) { @if (search.errors?.['required']) { } }
           </div>
         </div>
       </div>
@@ -277,29 +279,34 @@
               </tr>
             </thead>
             <tbody>
-                <ng-container *ngIf="employeeArr.length!=0">
-                    <tr *ngFor="let item of employeeArr; let sr =index">
-                        <td>{{sr+1}}</td>
-                        <td>{{item.Name}}</td>
-                        <td>{{item.Technology}}</td>
-                        <td>{{item.Designation}}</td>
-                        <td>{{item.Skill}}</td>
-                        <td>{{item.Core}}</td>
-                        <td>{{item.Company}}</td>
-                        <td>
-                            <i class="fa fa-pencil-square-o" (click)="onEdit(item)" style="font-size:24px"></i>
-                            <i class="fa fa-trash" (click)="onDelete(item)" style="font-size:24px" ></i>
-                        </td>
-                      </tr>
-                </ng-container>
-                <ng-container *ngIf="employeeArr.length ==0">
-                  <tr>
-                    <td colspan="8">
-                        NO RECORDS YET
-                    </td>
-                  </tr>
-                </ng-container>
-              
+              <ng-container *ngIf="employeeArr.length != 0">
+                <tr *ngFor="let item of employeeArr; let sr = index">
+                  <td>{{ sr + 1 }}</td>
+                  <td>{{ item.Name }}</td>
+                  <td>{{ item.Technology }}</td>
+                  <td>{{ item.Designation }}</td>
+                  <td>{{ item.Skill }}</td>
+                  <td>{{ item.Core }}</td>
+                  <td>{{ item.Company }}</td>
+                  <td>
+                    <i
+                      class="fa fa-pencil-square-o"
+                      (click)="onEdit(item)"
+                      style="font-size: 24px"
+                    ></i>
+                    <i
+                      class="fa fa-trash"
+                      (click)="onDelete(item)"
+                      style="font-size: 24px"
+                    ></i>
+                  </td>
+                </tr>
+              </ng-container>
+              <ng-container *ngIf="employeeArr.length == 0">
+                <tr>
+                  <td colspan="8">NO RECORDS YET</td>
+                </tr>
+              </ng-container>
             </tbody>
           </table>
         </div>
